All .csv results

--- a/generallized.ipynb
+++ b/generallized.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,41 +77,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Macro', 'Micro', 'Demographic', 'Industry', 'Finance', 'Other'],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "info_yearly['category'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "output_file = open(\"m4_general_results.csv\", \"w\")\n",
     "output_file.write(\"model,timeseries,sMAPE,MAPE,ShapeSimilarity,Grubbs\")\n",
@@ -120,28 +97,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_string(model,index, predicted, real):\n",
+    "def create_string(model,index, predicted, real, category):\n",
     "    alpha = 0.05\n",
     "    smape_score = round(smape(real, predicted),2)\n",
     "    mape_score = round(mape(real, predicted),2)\n",
     "    dtw_score = round(dtw(predicted,real),2)\n",
     "    outliers_score = round(grubbs_score(predicted, real, alpha),2)\n",
-    "    string_to_return = f\"{model},{index},{smape_score},{mape_score},{dtw_score},{outliers_score}\\n\"\n",
+    "    string_to_return = f\"{model},{index},{smape_score},{mape_score},{dtw_score},{outliers_score},{category}\\n\"\n",
     "\n",
     "    return string_to_return"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def naive_methods(timeseries_index, timeseries_train_df, timeseries_test_df):\n",
+    "def naive_methods(timeseries_index, timeseries_train_df, timeseries_test_df, category):\n",
     "    target_column_name = timeseries_test_df.columns[1]\n",
     "    real = timeseries_test_df[target_column_name]\n",
     "\n",
@@ -150,54 +127,54 @@
     "    random_walk_forecasts = random_walk(timeseries_train_df['target'].tolist(), len(timeseries_test_df))\n",
     "\n",
     "    string_to_return = ''\n",
-    "    string_to_return += create_string('Last Value', timeseries_index, last_value_forecasts, real)\n",
-    "    string_to_return += create_string('Mean Value', timeseries_index, mean_naive_forecasts, real)\n",
-    "    string_to_return += create_string('Random Walk', timeseries_index, random_walk_forecasts, real)\n",
+    "    string_to_return += create_string('Last Value', timeseries_index, last_value_forecasts, real, category)\n",
+    "    string_to_return += create_string('Mean Value', timeseries_index, mean_naive_forecasts, real, category)\n",
+    "    string_to_return += create_string('Random Walk', timeseries_index, random_walk_forecasts, real, category)\n",
     "\n",
     "    return string_to_return\n",
     "\n",
     "\n",
-    "def traditional_methods(timeseries_index, timeseries_train_df, timeseries_test_df):\n",
+    "def traditional_methods(timeseries_index, timeseries_train_df, timeseries_test_df, category):\n",
     "    target_column_name = timeseries_test_df.columns[1]\n",
     "    real = timeseries_test_df[target_column_name]\n",
     "    arima_forecasts = arima_model(series=timeseries_train_df['target'].astype(float), forecast_periods=len(timeseries_test_df))\n",
     "    theta_forecasts = theta_model_forecast(series=timeseries_train_df['target'], h=len(timeseries_test_df))\n",
     "\n",
     "    string_to_return = ''\n",
-    "    string_to_return += create_string('Arima', timeseries_index, arima_forecasts, real)\n",
-    "    string_to_return += create_string('Theta', timeseries_index, theta_forecasts, real)\n",
+    "    string_to_return += create_string('Arima', timeseries_index, arima_forecasts, real, category)\n",
+    "    string_to_return += create_string('Theta', timeseries_index, theta_forecasts, real, category)\n",
     "\n",
     "    return string_to_return\n",
     "\n",
     "\n",
-    "def ml_models(timeseries_index, timeseries_train_df, timeseries_test_df):\n",
+    "def ml_models(timeseries_index, timeseries_train_df, timeseries_test_df, category):\n",
     "    target_column_name = timeseries_test_df.columns[1]\n",
     "    real = timeseries_test_df[target_column_name]\n",
     "    prophet_forecasts = prophet_model(train=timeseries_train_df, test=timeseries_test_df)\n",
     "\n",
     "    string_to_return = ''\n",
-    "    string_to_return += create_string('Prophet', timeseries_index, prophet_forecasts, real)\n",
+    "    string_to_return += create_string('Prophet', timeseries_index, prophet_forecasts, real, category)\n",
     "\n",
     "    return string_to_return"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "object of type 'int' has no len()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/george/Documents/AthensTech/Dissertation/Dissertation_playground/generallized.ipynb Cell 11\u001b[0m line \u001b[0;36m9\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/george/Documents/AthensTech/Dissertation/Dissertation_playground/generallized.ipynb#X10sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m index \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/george/Documents/AthensTech/Dissertation/Dissertation_playground/generallized.ipynb#X10sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m macro_length \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(info_yearly[info_yearly[\u001b[39m'\u001b[39m\u001b[39mcategory\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m==\u001b[39m\u001b[39m'\u001b[39m\u001b[39mMacro\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/george/Documents/AthensTech/Dissertation/Dissertation_playground/generallized.ipynb#X10sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m tqdm(\u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39;49m(macro_length))):\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/george/Documents/AthensTech/Dissertation/Dissertation_playground/generallized.ipynb#X10sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     timeseries_train_df \u001b[39m=\u001b[39m create_df_with_datetimes(m4_train_dataset_df, i)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/george/Documents/AthensTech/Dissertation/Dissertation_playground/generallized.ipynb#X10sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     timeseries_test_df \u001b[39m=\u001b[39m create_df_with_datetimes(m4_test_dataset_df, i)\n",
-      "\u001b[0;31mTypeError\u001b[0m: object of type 'int' has no len()"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "print(len(info_yearly[info_yearly['category']=='Macro']))\n",
+    "print(len(info_yearly[info_yearly['category']=='Micro']))\n",
+    "\n",
+    "print(len(info_yearly[info_yearly['category']=='Macro']) + len(info_yearly[info_yearly['category']=='Micro']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "naive_dict = {\"timeseries\":\"last_value, mean_naive, random_walk\"}\n",
     "\n",
@@ -206,6 +183,7 @@
     "index = 0\n",
     "macro_length = len(info_yearly[info_yearly['category']=='Macro'])\n",
     "\n",
+    "current_index = macro_length\n",
     "\n",
     "for i in tqdm(range(macro_length)):\n",
     "    timeseries_train_df = create_df_with_datetimes(m4_train_dataset_df, i)\n",
@@ -217,9 +195,7 @@
     "    output_file.write(traditional_methods(timeseries_index, timeseries_train_df, timeseries_test_df))\n",
     "    output_file.write(ml_models(timeseries_index, timeseries_train_df, timeseries_test_df))\n",
     "\n",
-    "output_file.close()\n",
-    "\n",
-    "index += macro_length\n"
+    "output_file.close()"
    ]
   },
   {
@@ -228,23 +204,173 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "micro_length = len(info_yearly[info_yearly['category']=='Micro'])\n",
+    "current_index = 0\n",
+    "current_index = macro_length+micro_length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "demographic_length = len(info_yearly[info_yearly['category']=='Demographic'])\n",
+    "\n",
+    "output_file = open(\"m4_general_results.csv\", \"r\")\n",
+    "\n",
+    "index = len(output_file.readlines())\n",
+    "output_file.close()\n",
     "\n",
     "output_file = open(\"m4_general_results.csv\", \"a\")\n",
     "\n",
-    "for i in tqdm(range(index,micro_length)):\n",
+    "print(index)\n",
+    "\n",
+    "for i in tqdm(range(current_index, current_index+demographic_length)):\n",
     "    timeseries_train_df = create_df_with_datetimes(m4_train_dataset_df, i)\n",
     "    timeseries_test_df = create_df_with_datetimes(m4_test_dataset_df, i)\n",
     "\n",
     "    timeseries_index = m4_test_dataset_df['V1'][i]\n",
+    "    category = \"Demographic\"\n",
     "\n",
-    "    output_file.write(naive_methods(timeseries_index, timeseries_train_df, timeseries_test_df))\n",
-    "    output_file.write(traditional_methods(timeseries_index, timeseries_train_df, timeseries_test_df))\n",
-    "    output_file.write(ml_models(timeseries_index, timeseries_train_df, timeseries_test_df))\n",
+    "    output_file.write(naive_methods(timeseries_index, timeseries_train_df, timeseries_test_df, category))\n",
+    "    output_file.write(traditional_methods(timeseries_index, timeseries_train_df, timeseries_test_df, category))\n",
+    "    output_file.write(ml_models(timeseries_index, timeseries_train_df, timeseries_test_df, category))\n",
     "\n",
     "output_file.close()\n",
     "\n",
-    "index += micro_length\n"
+    "current_index += demographic_length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "demographic_length = len(info_yearly[info_yearly['category']=='Demographic'])\n",
+    "\n",
+    "output_file = open(\"m4_general_results.csv\", \"r\")\n",
+    "\n",
+    "index = len(output_file.readlines())\n",
+    "output_file.close()\n",
+    "\n",
+    "output_file = open(\"m4_general_results.csv\", \"a\")\n",
+    "\n",
+    "print(index)\n",
+    "\n",
+    "for i in tqdm(range(current_index, current_index+demographic_length)):\n",
+    "    timeseries_train_df = create_df_with_datetimes(m4_train_dataset_df, i)\n",
+    "    timeseries_test_df = create_df_with_datetimes(m4_test_dataset_df, i)\n",
+    "\n",
+    "    timeseries_index = m4_test_dataset_df['V1'][i]\n",
+    "    category = \"Demographic\"\n",
+    "\n",
+    "    output_file.write(naive_methods(timeseries_index, timeseries_train_df, timeseries_test_df, category))\n",
+    "    output_file.write(traditional_methods(timeseries_index, timeseries_train_df, timeseries_test_df, category))\n",
+    "    output_file.write(ml_models(timeseries_index, timeseries_train_df, timeseries_test_df, category))\n",
+    "\n",
+    "output_file.close()\n",
+    "\n",
+    "current_index += demographic_length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "industry_length = len(info_yearly[info_yearly['category']=='Industry'])\n",
+    "\n",
+    "output_file = open(\"m4_general_results.csv\", \"r\")\n",
+    "\n",
+    "index = len(output_file.readlines())\n",
+    "output_file.close()\n",
+    "\n",
+    "output_file = open(\"m4_general_results.csv\", \"a\")\n",
+    "\n",
+    "print(index)\n",
+    "\n",
+    "for i in tqdm(range(current_index, current_index+industry_length)):\n",
+    "    timeseries_train_df = create_df_with_datetimes(m4_train_dataset_df, i)\n",
+    "    timeseries_test_df = create_df_with_datetimes(m4_test_dataset_df, i)\n",
+    "\n",
+    "    timeseries_index = m4_test_dataset_df['V1'][i]\n",
+    "    category = \"Industry\"\n",
+    "\n",
+    "    output_file.write(naive_methods(timeseries_index, timeseries_train_df, timeseries_test_df, category))\n",
+    "    output_file.write(traditional_methods(timeseries_index, timeseries_train_df, timeseries_test_df, category))\n",
+    "    output_file.write(ml_models(timeseries_index, timeseries_train_df, timeseries_test_df, category))\n",
+    "\n",
+    "output_file.close()\n",
+    "\n",
+    "current_index += industry_length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "finance_length = len(info_yearly[info_yearly['category']=='Finance'])\n",
+    "\n",
+    "output_file = open(\"m4_general_results.csv\", \"r\")\n",
+    "\n",
+    "index = len(output_file.readlines())\n",
+    "output_file.close()\n",
+    "\n",
+    "output_file = open(\"m4_general_results.csv\", \"a\")\n",
+    "\n",
+    "print(index)\n",
+    "\n",
+    "for i in tqdm(range(current_index, current_index+finance_length)):\n",
+    "    timeseries_train_df = create_df_with_datetimes(m4_train_dataset_df, i)\n",
+    "    timeseries_test_df = create_df_with_datetimes(m4_test_dataset_df, i)\n",
+    "\n",
+    "    timeseries_index = m4_test_dataset_df['V1'][i]\n",
+    "    category = \"Finance\"\n",
+    "\n",
+    "    output_file.write(naive_methods(timeseries_index, timeseries_train_df, timeseries_test_df, category))\n",
+    "    output_file.write(traditional_methods(timeseries_index, timeseries_train_df, timeseries_test_df, category))\n",
+    "    output_file.write(ml_models(timeseries_index, timeseries_train_df, timeseries_test_df, category))\n",
+    "\n",
+    "output_file.close()\n",
+    "\n",
+    "current_index += finance_length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "other_length = len(info_yearly[info_yearly['category']=='Other'])\n",
+    "\n",
+    "output_file = open(\"m4_general_results.csv\", \"r\")\n",
+    "\n",
+    "index = len(output_file.readlines())\n",
+    "output_file.close()\n",
+    "\n",
+    "output_file = open(\"m4_general_results.csv\", \"a\")\n",
+    "\n",
+    "print(index)\n",
+    "\n",
+    "for i in tqdm(range(current_index, current_index+other_length)):\n",
+    "    timeseries_train_df = create_df_with_datetimes(m4_train_dataset_df, i)\n",
+    "    timeseries_test_df = create_df_with_datetimes(m4_test_dataset_df, i)\n",
+    "\n",
+    "    timeseries_index = m4_test_dataset_df['V1'][i]\n",
+    "    category = \"Other\"\n",
+    "\n",
+    "    output_file.write(naive_methods(timeseries_index, timeseries_train_df, timeseries_test_df, category))\n",
+    "    output_file.write(traditional_methods(timeseries_index, timeseries_train_df, timeseries_test_df, category))\n",
+    "    output_file.write(ml_models(timeseries_index, timeseries_train_df, timeseries_test_df, category))\n",
+    "\n",
+    "output_file.close()\n",
+    "\n",
+    "current_index += other_length "
    ]
   },
   {
