--- a/dissertation.ipynb
+++ b/dissertation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,28 +63,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loading just the first timeseries \n",
-    "first_timeseries_train = create_df_with_datetimes(train_df, 228)\n",
-    "first_timeseries_test = create_df_with_datetimes(test_df, 228)"
+    "first_timeseries_train = create_df_with_datetimes(train_df, 0)\n",
+    "first_timeseries_test = create_df_with_datetimes(test_df, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11255.15872\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Naive methods\n",
     "last_value_forecasts = predict_last_value(first_timeseries_train['target'].tolist(), len(first_timeseries_test))\n",
@@ -98,16 +90,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "first_timeseries_train.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "first_timeseries_test.to_csv('test.csv')"
+    "# New metrics:\n",
+    "\n",
+    "from evaluation_protocol.performance_metrics import rmse, nme, mae, mse\n",
+    "\n",
+    "real = first_timeseries_test['target']\n",
+    "\n",
+    "# def rmse(predicted, real):\n",
+    "#     predicted = np.array(predicted)\n",
+    "#     real = np.array(real)\n",
+    "#     return np.sqrt(((predicted-real)**2).mean())\n",
+    "\n",
+    "# def nme(predicted, real):\n",
+    "#     predicted = np.array(predicted)\n",
+    "#     real = np.array(real)\n",
+    "#     absolute_percentage_errors = np.abs((real - predicted) / real)\n",
+    "#     return absolute_percentage_errors.mean()\n",
+    "\n",
+    "# def mae(predicted, real):\n",
+    "#     predicted = np.array(predicted)\n",
+    "#     real = np.array(real)\n",
+    "#     return np.abs(predicted - real).mean()\n",
+    "\n",
+    "# def mse(predicted, real):\n",
+    "#     predicted = np.array(predicted)\n",
+    "#     real = np.array(real)\n",
+    "#     return ((predicted - real) ** 2).mean()\n",
+    "\n",
+    "print(f\"RMSE \\n\\\n",
+    "    Last value: {round(rmse(last_value_forecasts, real),2)}\\n\\\n",
+    "    Mean: {round(rmse(mean_naive_forecasts, real),2)}\\n\\\n",
+    "    Random Walk: {round(rmse(random_walk_forecasts, real),2)}\")\n",
+    "\n",
+    "print(f\"NME \\n\\\n",
+    "    Last value: {round(nme(last_value_forecasts, real),2)}\\n\\\n",
+    "    Mean: {round(nme(mean_naive_forecasts, real),2)}\\n\\\n",
+    "    Random Walk: {round(nme(random_walk_forecasts, real),2)}\")\n",
+    "\n",
+    "print(f\"MAE \\n\\\n",
+    "    Last value: {round(mae(last_value_forecasts, real),2)}\\n\\\n",
+    "    Mean: {round(mae(mean_naive_forecasts, real),2)}\\n\\\n",
+    "    Random Walk: {round(mae(random_walk_forecasts, real),2)}\")\n",
+    "\n",
+    "print(f\"MSE \\n\\\n",
+    "    Last value: {round(mse(last_value_forecasts, real),2)}\\n\\\n",
+    "    Mean: {round(mse(mean_naive_forecasts, real),2)}\\n\\\n",
+    "    Random Walk: {round(mse(random_walk_forecasts, real),2)}\")\n"
    ]
   },
   {
