--- a/lightgbm.ipynb
+++ b/lightgbm.ipynb
@@ -55,90 +55,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>01-01-80 18:00</td>\n",
-       "      <td>7290.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>01-01-81 00:00</td>\n",
-       "      <td>7392.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>01-01-82 06:00</td>\n",
-       "      <td>7527.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>01-01-83 12:00</td>\n",
-       "      <td>7594.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>01-01-84 18:00</td>\n",
-       "      <td>7720.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>01-01-85 00:00</td>\n",
-       "      <td>7823.2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        timestamp  target\n",
-       "1  01-01-80 18:00  7290.2\n",
-       "2  01-01-81 00:00  7392.6\n",
-       "3  01-01-82 06:00  7527.6\n",
-       "4  01-01-83 12:00  7594.8\n",
-       "5  01-01-84 18:00  7720.7\n",
-       "6  01-01-85 00:00  7823.2"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "light_gbm_forecasts[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "from evaluation_protocol.grubbs import grubbs_score\n",
@@ -184,127 +100,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1    7290.2\n",
-       "2    7392.6\n",
-       "3    7527.6\n",
-       "4    7594.8\n",
-       "5    7720.7\n",
-       "6    7823.2\n",
-       "Name: target, dtype: object"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predicted"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1    7290.2\n",
-       "2    7392.6\n",
-       "3    7527.6\n",
-       "4    7594.8\n",
-       "5    7720.7\n",
-       "6    7823.2\n",
-       "Name: target, dtype: object"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "real"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_list = [1,2,3,4,5,6,7,8,9,0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_list[-1:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4, 5, 6, 7, 8, 9]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_list[:-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([7, 8, 9, 0])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.roll(test_list, -6)[:-6]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [],
@@ -333,15 +128,9 @@
     "        temp_test = np.roll(temp_test, -1)[:-1]\n",
     "        temp_train = np.roll(temp_train, -1)[:-1]\n",
     "\n",
-    "    return x_train, y_train, x_test, y_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return x_train, y_train, x_test, y_test\n",
+    "\n",
+    "\n",
     "def detrend(insample_data):\n",
     "    \"\"\"\n",
     "    Calculates a & b parameters of LRL\n",
@@ -351,15 +140,9 @@
     "    \"\"\"\n",
     "    x = np.arange(len(insample_data))\n",
     "    a, b = np.polyfit(x, insample_data, 1)\n",
-    "    return a, b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return a, b\n",
+    "\n",
+    "\n",
     "def acf(data, k):\n",
     "    \"\"\"\n",
     "    Autocorrelation function\n",
@@ -377,15 +160,9 @@
     "    for i in range(0, len(data)):\n",
     "        s2 = s2 + ((data[i] - m) ** 2)\n",
     "\n",
-    "    return float(s1 / s2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return float(s1 / s2)\n",
+    "\n",
+    "\n",
     "def seasonality_test(original_ts, ppy):\n",
     "    \"\"\"\n",
     "    Seasonality test\n",
@@ -404,15 +181,9 @@
     "\n",
     "    limit = 1.645 * (sqrt((1 + 2 * s) / len(original_ts)))\n",
     "\n",
-    "    return (abs(acf(original_ts, ppy))) > limit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return (abs(acf(original_ts, ppy))) > limit\n",
+    "\n",
+    "\n",
     "def moving_averages(ts_init, window):\n",
     "    \"\"\"\n",
     "    Calculates the moving averages for a given TS\n",
@@ -440,15 +211,9 @@
     "    else:\n",
     "        ts_ma = pd.rolling_mean(ts_init, window, center=True)\n",
     "\n",
-    "    return ts_ma"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return ts_ma\n",
+    "\n",
+    "\n",
     "def deseasonalize(original_ts, ppy):\n",
     "    \"\"\"\n",
     "    Calculates and returns seasonal indices\n",
@@ -478,239 +243,6 @@
     "        si = np.full(ppy, 100)\n",
     "\n",
     "    return si\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>V1</th>\n",
-       "      <th>V2</th>\n",
-       "      <th>V3</th>\n",
-       "      <th>V4</th>\n",
-       "      <th>V5</th>\n",
-       "      <th>V6</th>\n",
-       "      <th>V7</th>\n",
-       "      <th>V8</th>\n",
-       "      <th>V9</th>\n",
-       "      <th>V10</th>\n",
-       "      <th>...</th>\n",
-       "      <th>V827</th>\n",
-       "      <th>V828</th>\n",
-       "      <th>V829</th>\n",
-       "      <th>V830</th>\n",
-       "      <th>V831</th>\n",
-       "      <th>V832</th>\n",
-       "      <th>V833</th>\n",
-       "      <th>V834</th>\n",
-       "      <th>V835</th>\n",
-       "      <th>V836</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Y1</td>\n",
-       "      <td>5172.1</td>\n",
-       "      <td>5133.5</td>\n",
-       "      <td>5186.9</td>\n",
-       "      <td>5084.6</td>\n",
-       "      <td>5182.0</td>\n",
-       "      <td>5414.3</td>\n",
-       "      <td>5576.2</td>\n",
-       "      <td>5752.9</td>\n",
-       "      <td>5955.2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Y2</td>\n",
-       "      <td>2070.0</td>\n",
-       "      <td>2104.0</td>\n",
-       "      <td>2394.0</td>\n",
-       "      <td>1651.0</td>\n",
-       "      <td>1492.0</td>\n",
-       "      <td>1348.0</td>\n",
-       "      <td>1198.0</td>\n",
-       "      <td>1192.0</td>\n",
-       "      <td>1105.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Y3</td>\n",
-       "      <td>2760.0</td>\n",
-       "      <td>2980.0</td>\n",
-       "      <td>3200.0</td>\n",
-       "      <td>3450.0</td>\n",
-       "      <td>3670.0</td>\n",
-       "      <td>3850.0</td>\n",
-       "      <td>4000.0</td>\n",
-       "      <td>4160.0</td>\n",
-       "      <td>4290.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Y4</td>\n",
-       "      <td>3380.0</td>\n",
-       "      <td>3670.0</td>\n",
-       "      <td>3960.0</td>\n",
-       "      <td>4190.0</td>\n",
-       "      <td>4440.0</td>\n",
-       "      <td>4700.0</td>\n",
-       "      <td>4890.0</td>\n",
-       "      <td>5060.0</td>\n",
-       "      <td>5200.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Y5</td>\n",
-       "      <td>1980.0</td>\n",
-       "      <td>2030.0</td>\n",
-       "      <td>2220.0</td>\n",
-       "      <td>2530.0</td>\n",
-       "      <td>2610.0</td>\n",
-       "      <td>2720.0</td>\n",
-       "      <td>2970.0</td>\n",
-       "      <td>2980.0</td>\n",
-       "      <td>3100.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 836 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   V1      V2      V3      V4      V5      V6      V7      V8      V9     V10   \n",
-       "0  Y1  5172.1  5133.5  5186.9  5084.6  5182.0  5414.3  5576.2  5752.9  5955.2  \\\n",
-       "1  Y2  2070.0  2104.0  2394.0  1651.0  1492.0  1348.0  1198.0  1192.0  1105.0   \n",
-       "2  Y3  2760.0  2980.0  3200.0  3450.0  3670.0  3850.0  4000.0  4160.0  4290.0   \n",
-       "3  Y4  3380.0  3670.0  3960.0  4190.0  4440.0  4700.0  4890.0  5060.0  5200.0   \n",
-       "4  Y5  1980.0  2030.0  2220.0  2530.0  2610.0  2720.0  2970.0  2980.0  3100.0   \n",
-       "\n",
-       "   ...  V827  V828  V829  V830  V831  V832  V833  V834  V835  V836  \n",
-       "0  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
-       "1  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
-       "2  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
-       "3  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
-       "4  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
-       "\n",
-       "[5 rows x 836 columns]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "V1          Y1\n",
-       "V2      5172.1\n",
-       "V3      5133.5\n",
-       "V4      5186.9\n",
-       "V5      5084.6\n",
-       "         ...  \n",
-       "V832       NaN\n",
-       "V833       NaN\n",
-       "V834       NaN\n",
-       "V835       NaN\n",
-       "V836       NaN\n",
-       "Name: 0, Length: 836, dtype: object"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_df.loc[0]"
    ]
   },
   {
